--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -9,10 +9,12 @@
         <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
-        <!-- Основная часть страницы -->
-        <div class="container" id="contacts-container">
-            <!-- Форма создания и редактирования контактов -->
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
+        <!---->
+        <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
+        <!---->
+        <div class="container my-5" id="contacts-container">
+            <!---->
             <div class="row mb-5">
                 <div class="col-12">
                     <form id="contacts-form" action="#" th:action="@{/rest/contacts/save}" method="post" class="border rounded p-3">
@@ -35,7 +37,7 @@
                     </form>
                 </div>
             </div>
-            <!-- Список контактов -->
+            <!---->
             <div class="row">
                 <div class="col-12" id="contacts">
                     <div th:each="each, status : ${contacts}" class="text-start" th:classappend="${!status.last} ? 'mb-2'" th:id="'contact-' + ${each.id}">
@@ -47,16 +49,17 @@
                     </div>
                 </div>
             </div>
-            <!-- Сообщение об отсутствии контактов -->
-            <div th:if="${contacts.empty}" class="row" id="empty-contacts-message">
+            <!---->
+            <div class="row" th:if="${contacts.empty}" id="empty-contacts-message">
                 <div class="col-12">
                     <div class="text-secondary text-center fst-italic fs-1">Список контактов пуст</div>
                 </div>
             </div>
         </div>
-        <!-- Модальное окно для сообщений об ошибке -->
+        <!---->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-        <!-- Скрипты -->
+        <div th:replace="~{/fragments/footers/footer :: footer}"></div>
+        <!---->
         <script src="../static/js/contacts.js" th:src="@{/js/contacts.js}"></script>
         <script src="../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
     </body>
