--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -37,14 +37,56 @@
             <!---->
             <div class="row mb-5" th:if="${isEmployee}">
                 <div class="col-12">
-                    <h3 class="fs-4">Рабочая информация</h3>
+                    <h3 class="fs-4">
+                        Рабочая информация
+                        <a href="#" class="text-decoration-none">
+                            <svg
+                                fill="#000000"
+                                class="mb-1"
+                                width="20px"
+                                height="20px"
+                                version="1.1"
+                                id="Layer_1"
+                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                viewBox="0 0 72 72"
+                                enable-background="new 0 0 72 72"
+                                xml:space="preserve"
+                            >
+                                <path
+                                    d="M67.982,14.221c-0.148-2.527-1.26-5.003-3.049-6.792l-0.436-0.435c-1.881-1.882-4.354-2.918-6.961-2.918c-2.465,0-4.764,0.941-6.475,2.652L10.94,46.85c-3.097,3.096-6.277,15.676-6.883,18.166c-0.165,0.68,0.035,1.395,0.529,1.889l0.435,0.434c0.379,0.381,0.89,0.586,1.414,0.586c0.143,0,0.287-0.014,0.43-0.047c2.541-0.559,15.373-3.506,18.484-6.617l40.125-40.121C67.25,19.364,68.141,16.907,67.982,14.221z M49.908,18.983c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l3.016-3.016l1.896,1.895L21.247,52.849l-1.895-1.895l29.076-29.075c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L17.938,49.54l-2.016-2.017l34.986-34.985l2.016,2.015l-3.016,3.016C49.518,17.96,49.518,18.592,49.908,18.983z M24.675,56.277l-2.015-2.015l34.987-34.986l2.016,2.015L24.675,56.277z M10.28,57.71l4.087,4.088c-1.894,0.567-3.892,1.106-5.755,1.565C9.105,61.533,9.68,59.57,10.28,57.71z M16.52,61.123l-5.529-5.53c0.991-2.821,1.994-5.133,2.777-5.915l0.74-0.74l2.722,2.722c0,0.001,0,0.001,0.001,0.002s0.001,0.001,0.002,0.001l6.028,6.029l-0.74,0.74C21.742,59.211,19.393,60.18,16.52,61.123z M62.645,18.31l-1.568,1.568l-6.03-6.03c0,0-0.001-0.001-0.001-0.001s-0.001,0-0.002-0.001l-2.721-2.721l1.568-1.568c0.955-0.955,2.25-1.48,3.646-1.48c1.539,0,3.007,0.62,4.133,1.746l0.435,0.435c1.107,1.105,1.793,2.636,1.885,4.199C64.079,15.984,63.602,17.353,62.645,18.31z"
+                                />
+                            </svg>
+                        </a>
+                    </h3>
                     <p class="mb-0">Должность: врач-кардиолог 3-го ранга</p>
                 </div>
             </div>
             <!---->
             <div class="row mb-5">
                 <div class="col-12">
-                    <h3 class="fs-4">Общая информация</h3>
+                    <h3 class="fs-4">
+                        Общая информация
+                        <a href="#" class="text-decoration-none">
+                            <svg
+                                fill="#000000"
+                                class="mb-1"
+                                width="20px"
+                                height="20px"
+                                version="1.1"
+                                id="Layer_1"
+                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                viewBox="0 0 72 72"
+                                enable-background="new 0 0 72 72"
+                                xml:space="preserve"
+                            >
+                                <path
+                                    d="M67.982,14.221c-0.148-2.527-1.26-5.003-3.049-6.792l-0.436-0.435c-1.881-1.882-4.354-2.918-6.961-2.918c-2.465,0-4.764,0.941-6.475,2.652L10.94,46.85c-3.097,3.096-6.277,15.676-6.883,18.166c-0.165,0.68,0.035,1.395,0.529,1.889l0.435,0.434c0.379,0.381,0.89,0.586,1.414,0.586c0.143,0,0.287-0.014,0.43-0.047c2.541-0.559,15.373-3.506,18.484-6.617l40.125-40.121C67.25,19.364,68.141,16.907,67.982,14.221z M49.908,18.983c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l3.016-3.016l1.896,1.895L21.247,52.849l-1.895-1.895l29.076-29.075c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L17.938,49.54l-2.016-2.017l34.986-34.985l2.016,2.015l-3.016,3.016C49.518,17.96,49.518,18.592,49.908,18.983z M24.675,56.277l-2.015-2.015l34.987-34.986l2.016,2.015L24.675,56.277z M10.28,57.71l4.087,4.088c-1.894,0.567-3.892,1.106-5.755,1.565C9.105,61.533,9.68,59.57,10.28,57.71z M16.52,61.123l-5.529-5.53c0.991-2.821,1.994-5.133,2.777-5.915l0.74-0.74l2.722,2.722c0,0.001,0,0.001,0.001,0.002s0.001,0.001,0.002,0.001l6.028,6.029l-0.74,0.74C21.742,59.211,19.393,60.18,16.52,61.123z M62.645,18.31l-1.568,1.568l-6.03-6.03c0,0-0.001-0.001-0.001-0.001s-0.001,0-0.002-0.001l-2.721-2.721l1.568-1.568c0.955-0.955,2.25-1.48,3.646-1.48c1.539,0,3.007,0.62,4.133,1.746l0.435,0.435c1.107,1.105,1.793,2.636,1.885,4.199C64.079,15.984,63.602,17.353,62.645,18.31z"
+                                />
+                            </svg>
+                        </a>
+                    </h3>
                     <p class="mb-1">ФИО: Иванов Казимир Петрович</p>
                     <p class="mb-1">Телефон: +7 (121) 916-09-91</p>
                     <p class="mb-1">Пол: мужской</p>
@@ -54,7 +96,28 @@
             <!---->
             <div class="row mb-5" th:if="${isSelf}">
                 <div class="col-12">
-                    <h3 class="fs-4">Логин-информация</h3>
+                    <h3 class="fs-4">
+                        Логин-информация
+                        <a href="#" class="text-decoration-none">
+                            <svg
+                                fill="#000000"
+                                class="mb-1"
+                                width="20px"
+                                height="20px"
+                                version="1.1"
+                                id="Layer_1"
+                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                viewBox="0 0 72 72"
+                                enable-background="new 0 0 72 72"
+                                xml:space="preserve"
+                            >
+                                <path
+                                    d="M67.982,14.221c-0.148-2.527-1.26-5.003-3.049-6.792l-0.436-0.435c-1.881-1.882-4.354-2.918-6.961-2.918c-2.465,0-4.764,0.941-6.475,2.652L10.94,46.85c-3.097,3.096-6.277,15.676-6.883,18.166c-0.165,0.68,0.035,1.395,0.529,1.889l0.435,0.434c0.379,0.381,0.89,0.586,1.414,0.586c0.143,0,0.287-0.014,0.43-0.047c2.541-0.559,15.373-3.506,18.484-6.617l40.125-40.121C67.25,19.364,68.141,16.907,67.982,14.221z M49.908,18.983c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l3.016-3.016l1.896,1.895L21.247,52.849l-1.895-1.895l29.076-29.075c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L17.938,49.54l-2.016-2.017l34.986-34.985l2.016,2.015l-3.016,3.016C49.518,17.96,49.518,18.592,49.908,18.983z M24.675,56.277l-2.015-2.015l34.987-34.986l2.016,2.015L24.675,56.277z M10.28,57.71l4.087,4.088c-1.894,0.567-3.892,1.106-5.755,1.565C9.105,61.533,9.68,59.57,10.28,57.71z M16.52,61.123l-5.529-5.53c0.991-2.821,1.994-5.133,2.777-5.915l0.74-0.74l2.722,2.722c0,0.001,0,0.001,0.001,0.002s0.001,0.001,0.002,0.001l6.028,6.029l-0.74,0.74C21.742,59.211,19.393,60.18,16.52,61.123z M62.645,18.31l-1.568,1.568l-6.03-6.03c0,0-0.001-0.001-0.001-0.001s-0.001,0-0.002-0.001l-2.721-2.721l1.568-1.568c0.955-0.955,2.25-1.48,3.646-1.48c1.539,0,3.007,0.62,4.133,1.746l0.435,0.435c1.107,1.105,1.793,2.636,1.885,4.199C64.079,15.984,63.602,17.353,62.645,18.31z"
+                                />
+                            </svg>
+                        </a>
+                    </h3>
                     <p class="mb-1">Почта: Иванов Казимир Петрович</p>
                     <p class="mb-0">Пароль: my!Str0ngP4ssword@</p>
                 </div>
