--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -21,7 +21,14 @@
             <div class="row">
                 <div class="col-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-                        <h1 th:text="${user.userInformation.fullName}" class="fs-3 m-2">Иванов Казимир Петрович</h1>
+                        <h1 class="fs-3 m-1">
+                            <span th:text="${user.userInformation.fullName}">Иванов Казимир Петрович</span>
+                            <a href="#" class="text-decoration-none">
+                                <a href="#" class="text-decoration-none">
+                                    <img class="mb-1" src="" th:src="@{/svg/message-square-dots-svgrepo-com.svg}" width="24" alt="" />
+                                </a>
+                            </a>
+                        </h1>
                         <h2 th:text="${user.role.alias}" class="fs-4 m-2">Врач</h2>
                     </div>
                 </div>
@@ -40,23 +47,7 @@
                     <h3 class="fs-4">
                         Рабочая информация
                         <a href="#" class="text-decoration-none">
-                            <svg
-                                fill="#000000"
-                                class="mb-1"
-                                width="20px"
-                                height="20px"
-                                version="1.1"
-                                id="Layer_1"
-                                xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink"
-                                viewBox="0 0 72 72"
-                                enable-background="new 0 0 72 72"
-                                xml:space="preserve"
-                            >
-                                <path
-                                    d="M67.982,14.221c-0.148-2.527-1.26-5.003-3.049-6.792l-0.436-0.435c-1.881-1.882-4.354-2.918-6.961-2.918c-2.465,0-4.764,0.941-6.475,2.652L10.94,46.85c-3.097,3.096-6.277,15.676-6.883,18.166c-0.165,0.68,0.035,1.395,0.529,1.889l0.435,0.434c0.379,0.381,0.89,0.586,1.414,0.586c0.143,0,0.287-0.014,0.43-0.047c2.541-0.559,15.373-3.506,18.484-6.617l40.125-40.121C67.25,19.364,68.141,16.907,67.982,14.221z M49.908,18.983c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l3.016-3.016l1.896,1.895L21.247,52.849l-1.895-1.895l29.076-29.075c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L17.938,49.54l-2.016-2.017l34.986-34.985l2.016,2.015l-3.016,3.016C49.518,17.96,49.518,18.592,49.908,18.983z M24.675,56.277l-2.015-2.015l34.987-34.986l2.016,2.015L24.675,56.277z M10.28,57.71l4.087,4.088c-1.894,0.567-3.892,1.106-5.755,1.565C9.105,61.533,9.68,59.57,10.28,57.71z M16.52,61.123l-5.529-5.53c0.991-2.821,1.994-5.133,2.777-5.915l0.74-0.74l2.722,2.722c0,0.001,0,0.001,0.001,0.002s0.001,0.001,0.002,0.001l6.028,6.029l-0.74,0.74C21.742,59.211,19.393,60.18,16.52,61.123z M62.645,18.31l-1.568,1.568l-6.03-6.03c0,0-0.001-0.001-0.001-0.001s-0.001,0-0.002-0.001l-2.721-2.721l1.568-1.568c0.955-0.955,2.25-1.48,3.646-1.48c1.539,0,3.007,0.62,4.133,1.746l0.435,0.435c1.107,1.105,1.793,2.636,1.885,4.199C64.079,15.984,63.602,17.353,62.645,18.31z"
-                                />
-                            </svg>
+                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
                         </a>
                     </h3>
                     <p class="mb-0">Должность: <span th:text="${user.employeeInformation.post}" class="text-lowercase">врач-кардиолог 3-го ранга</span></p>
@@ -68,28 +59,12 @@
                     <h3 class="fs-4">
                         Общая информация
                         <a href="#" class="text-decoration-none">
-                            <svg
-                                fill="#000000"
-                                class="mb-1"
-                                width="20px"
-                                height="20px"
-                                version="1.1"
-                                id="Layer_1"
-                                xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink"
-                                viewBox="0 0 72 72"
-                                enable-background="new 0 0 72 72"
-                                xml:space="preserve"
-                            >
-                                <path
-                                    d="M67.982,14.221c-0.148-2.527-1.26-5.003-3.049-6.792l-0.436-0.435c-1.881-1.882-4.354-2.918-6.961-2.918c-2.465,0-4.764,0.941-6.475,2.652L10.94,46.85c-3.097,3.096-6.277,15.676-6.883,18.166c-0.165,0.68,0.035,1.395,0.529,1.889l0.435,0.434c0.379,0.381,0.89,0.586,1.414,0.586c0.143,0,0.287-0.014,0.43-0.047c2.541-0.559,15.373-3.506,18.484-6.617l40.125-40.121C67.25,19.364,68.141,16.907,67.982,14.221z M49.908,18.983c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l3.016-3.016l1.896,1.895L21.247,52.849l-1.895-1.895l29.076-29.075c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L17.938,49.54l-2.016-2.017l34.986-34.985l2.016,2.015l-3.016,3.016C49.518,17.96,49.518,18.592,49.908,18.983z M24.675,56.277l-2.015-2.015l34.987-34.986l2.016,2.015L24.675,56.277z M10.28,57.71l4.087,4.088c-1.894,0.567-3.892,1.106-5.755,1.565C9.105,61.533,9.68,59.57,10.28,57.71z M16.52,61.123l-5.529-5.53c0.991-2.821,1.994-5.133,2.777-5.915l0.74-0.74l2.722,2.722c0,0.001,0,0.001,0.001,0.002s0.001,0.001,0.002,0.001l6.028,6.029l-0.74,0.74C21.742,59.211,19.393,60.18,16.52,61.123z M62.645,18.31l-1.568,1.568l-6.03-6.03c0,0-0.001-0.001-0.001-0.001s-0.001,0-0.002-0.001l-2.721-2.721l1.568-1.568c0.955-0.955,2.25-1.48,3.646-1.48c1.539,0,3.007,0.62,4.133,1.746l0.435,0.435c1.107,1.105,1.793,2.636,1.885,4.199C64.079,15.984,63.602,17.353,62.645,18.31z"
-                                />
-                            </svg>
+                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
                         </a>
                     </h3>
                     <p class="mb-1" th:text="'ФИО: ' + ${user.userInformation.fullName}">ФИО: Иванов Казимир Петрович</p>
-                    <p class="mb-1" th:text="'Телефон: ' + ${user.userInformation.phoneNumber}">Телефон: +7 (121) 916-09-91</p>
-                    <p class="mb-1" th:if="${user.userInformation.gender != null}">Пол: <span th:text="${user.userInformation.gender.alias}" class="text-lowercase"></span></p>
+                    <p th:text="'Телефон: ' + ${user.userInformation.phoneNumber}" th:classappend="${user.userInformation.gender == null && user.userInformation.birthdate == null} ? 'mb-0' : 'mb-1'">Телефон: +7 (121) 916-09-91</p>
+                    <p th:if="${user.userInformation.gender != null}" th:classappend="${user.userInformation.birthdate == null} ? 'mb-0' : 'mb-1'">Пол: <span th:text="${user.userInformation.gender.alias}" class="text-lowercase"></span></p>
                     <p class="mb-0" th:if="${user.userInformation.birthdate != null}" th:text="'Дата рождения: ' + ${user.userInformation.formattedBirthdate}">Дата рождения: 18-01-1981</p>
                 </div>
             </div>
@@ -99,23 +74,7 @@
                     <h3 class="fs-4">
                         Логин-информация
                         <a href="#" class="text-decoration-none">
-                            <svg
-                                fill="#000000"
-                                class="mb-1"
-                                width="20px"
-                                height="20px"
-                                version="1.1"
-                                id="Layer_1"
-                                xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink"
-                                viewBox="0 0 72 72"
-                                enable-background="new 0 0 72 72"
-                                xml:space="preserve"
-                            >
-                                <path
-                                    d="M67.982,14.221c-0.148-2.527-1.26-5.003-3.049-6.792l-0.436-0.435c-1.881-1.882-4.354-2.918-6.961-2.918c-2.465,0-4.764,0.941-6.475,2.652L10.94,46.85c-3.097,3.096-6.277,15.676-6.883,18.166c-0.165,0.68,0.035,1.395,0.529,1.889l0.435,0.434c0.379,0.381,0.89,0.586,1.414,0.586c0.143,0,0.287-0.014,0.43-0.047c2.541-0.559,15.373-3.506,18.484-6.617l40.125-40.121C67.25,19.364,68.141,16.907,67.982,14.221z M49.908,18.983c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l3.016-3.016l1.896,1.895L21.247,52.849l-1.895-1.895l29.076-29.075c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L17.938,49.54l-2.016-2.017l34.986-34.985l2.016,2.015l-3.016,3.016C49.518,17.96,49.518,18.592,49.908,18.983z M24.675,56.277l-2.015-2.015l34.987-34.986l2.016,2.015L24.675,56.277z M10.28,57.71l4.087,4.088c-1.894,0.567-3.892,1.106-5.755,1.565C9.105,61.533,9.68,59.57,10.28,57.71z M16.52,61.123l-5.529-5.53c0.991-2.821,1.994-5.133,2.777-5.915l0.74-0.74l2.722,2.722c0,0.001,0,0.001,0.001,0.002s0.001,0.001,0.002,0.001l6.028,6.029l-0.74,0.74C21.742,59.211,19.393,60.18,16.52,61.123z M62.645,18.31l-1.568,1.568l-6.03-6.03c0,0-0.001-0.001-0.001-0.001s-0.001,0-0.002-0.001l-2.721-2.721l1.568-1.568c0.955-0.955,2.25-1.48,3.646-1.48c1.539,0,3.007,0.62,4.133,1.746l0.435,0.435c1.107,1.105,1.793,2.636,1.885,4.199C64.079,15.984,63.602,17.353,62.645,18.31z"
-                                />
-                            </svg>
+                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
                         </a>
                     </h3>
                     <p class="mb-1" th:text="'Почта: ' + ${user.userSecurityInformation.email}">Почта: some@exampleMail</p>
@@ -125,47 +84,30 @@
             <!---->
             <div class="row mb-5">
                 <div class="col-12">
-                    <h3 class="fs-4">Активность</h3>
+                    <h3 class="fs-4">
+                        Активность
+                        <a href="#" class="text-decoration-none">
+                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
+                        </a>
+                    </h3>
                     <p class="text-success mb-0">На текущий момент этот пользователь активен</p>
                 </div>
             </div>
             <!---->
             <div class="row" th:if="${isPatient}">
                 <div class="col-12">
-                    <h3 class="fs-4">Лечащий врач</h3>
+                    <h3 class="fs-4">
+                        Лечащий врач
+                        <a href="#" class="text-decoration-none">
+                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
+                        </a>
+                    </h3>
                     <p th:if="${user.doctor != null}" class="mb-0"><a href="#" th:href="@{/doctors/__${user.doctor.id}__}" th:text="${user.doctor.userInformation.fullName}" class="text-secondary">Дачников Пётр Аркадьевич</a></p>
                     <p th:if="${user.doctor == null}" class="text-danger">
                         Сейчас этот пациент не закреплён ни за одним врачом. <span th:if="${isCurrentUserAdminFromSameHospital}">Необходимо в ближайшее время <a href="#" class="text-danger">назначить</a> ему лечащего врача.</span>
                     </p>
                 </div>
             </div>
-            <hr class="my-5" />
-            <!---->
-            <div class="row">
-                <div>
-                    <button type="button" class="btn btn-primary">Написать сообщение</button>
-                    <button type="button" class="btn btn-secondary">Закрепить за врачом</button>
-                    <button type="button" class="btn btn-success">Отправить в отпуск</button>
-                    <button type="button" class="btn btn-warning">Отправить на больничный</button>
-                    <button type="button" class="btn btn-danger">Уволить</button>
-                    <button type="button" class="btn btn-danger">Сделать неактивным</button>
-                </div>
-            </div>
-            <!--<p class="d-inline-flex gap-1">
-                <button class="btn btn-primary m-1">Написать сообщение</button>
-                <button class="btn btn-primary m-1" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Остальные действия</button>
-            </p>
-            <div class="collapse" id="collapseExample">
-                <div class="card card-body">
-                    <div>
-                        <button type="button" class="btn btn-secondary mb-2">Закрепить за врачом</button>
-                        <button type="button" class="btn btn-success mb-2">Отправить в отпуск</button>
-                        <button type="button" class="btn btn-warning mb-2">Отправить на больничный</button>
-                        <button type="button" class="btn btn-danger mb-2">Уволить</button>
-                        <button type="button" class="btn btn-danger mb-2">Сделать неактивным</button>
-                    </div>
-                </div>
-            </div>-->
             <!---->
         </div>
         <!---->
