--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title th:text="${title}">Пользователь</title>
+        <title th:text="${user.userInformation.fullName}">Пользователь</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -22,14 +22,14 @@
                 <div class="col-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                         <h1 class="fs-3 m-1">
-                            <span th:text="${user.userInformation.fullName}">Иванов Казимир Петрович</span>
+                            <span th:text="${user.userInformation.fullName}"><span th:if="${isPatient && isCurrentUserOwnDoctor}" class="text-success fs-5">*</span> Иванов Казимир Петрович</span>
                             <a href="#" class="text-decoration-none">
-                                <a href="#" class="text-decoration-none">
-                                    <img class="mb-1" src="" th:src="@{/svg/message-square-dots-svgrepo-com.svg}" width="24" alt="" />
+                                <a th:if="${isMessageEnabled}" href="#" class="text-decoration-none">
+                                    <img class="mb-1" src="../../static/svg/message-square-dots-svgrepo-com.svg" th:src="@{/svg/message-square-dots-svgrepo-com.svg}" width="24" alt="Написать сообщение" />
                                 </a>
                             </a>
                         </h1>
-                        <h2 th:text="${user.role.alias}" class="fs-4 m-2">Врач</h2>
+                        <h2 th:text="${user.role.alias}" class="fs-4 m-1">Врач</h2>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,9 @@
             <div class="row mb-5" th:if="${isHospitalUser}">
                 <div class="col-12">
                     <h3 class="fs-4">Медицинское учреждение</h3>
-                    <p class="mb-0" th:text="${user.hospital.name}">Национальный медицинский исследовательский центр имени В. А. Алмазова</p>
+                    <p class="mb-0" th:text="${user.hospital.name}">
+                        <a href="#" th:href="@{/hospitals/__${user.hospital.id}__}" class="text-secondary">Национальный медицинский исследовательский центр имени В. А. Алмазова</a>
+                    </p>
                 </div>
             </div>
             <!---->
@@ -47,7 +49,7 @@
                     <h3 class="fs-4">
                         Рабочая информация
                         <a href="#" class="text-decoration-none">
-                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
+                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p class="mb-0">Должность: <span th:text="${user.employeeInformation.post}" class="text-lowercase">врач-кардиолог 3-го ранга</span></p>
@@ -59,7 +61,7 @@
                     <h3 class="fs-4">
                         Общая информация
                         <a href="#" class="text-decoration-none">
-                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
+                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p class="mb-1" th:text="'ФИО: ' + ${user.userInformation.fullName}">ФИО: Иванов Казимир Петрович</p>
@@ -74,11 +76,11 @@
                     <h3 class="fs-4">
                         Логин-информация
                         <a href="#" class="text-decoration-none">
-                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
+                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p class="mb-1" th:text="'Почта: ' + ${user.userSecurityInformation.email}">Почта: some@exampleMail</p>
-                    <p class="mb-0" th:text="'Пароль: ' + ${user.userSecurityInformation.password}">Пароль: my!Str0ngP4ssword@</p>
+                    <p class="mb-0">Пароль: ••••••••••••</p>
                 </div>
             </div>
             <!---->
@@ -86,11 +88,30 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Активность
-                        <a href="#" class="text-decoration-none">
-                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
+                        <a th:if="${isActivityEditingEnabled}" href="#" class="text-decoration-none">
+                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p class="text-success mb-0">На текущий момент этот пользователь активен</p>
+                </div>
+            </div>
+            <!---->
+            <div class="row" th:if="${isDoctor}">
+                <div class="col-12">
+                    <h3 class="fs-4">Пациенты</h3>
+                    <p th:if="${!user.patients.empty}" class="mb-1">
+                        <span th:if="${isSelf}">Сейчас за вами закреплено пациентов: </span>
+                        <span th:if="${!isSelf}">Сейчас за этим врачом закреплено пациентов: </span>
+                        <span th:text="${user.patientsCount}">5</span>
+                    </p>
+                    <p th:if="${!user.patients.empty}" class="mb-0">
+                        Перейти к
+                        <a href="#" th:href="@{/doctors/__${user.id}__/patients}" class="text-secondary"> списку пациентов</a>
+                    </p>
+                    <p th:if="${user.patients.empty}" class="text-danger mb-0">
+                        <span th:if="${isSelf}">Сейчас у вас нет никаких пациентов</span>
+                        <span th:if="${!isSelf}">Сейчас у этого врача нет никаких пациентов</span>
+                    </p>
                 </div>
             </div>
             <!---->
@@ -98,13 +119,36 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Лечащий врач
-                        <a href="#" class="text-decoration-none">
-                            <img class="mb-1" src="" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="" />
+                        <a th:if="${isCurrentUserAdminFromSameHospital}" href="#" class="text-decoration-none">
+                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p th:if="${user.doctor != null}" class="mb-0"><a href="#" th:href="@{/doctors/__${user.doctor.id}__}" th:text="${user.doctor.userInformation.fullName}" class="text-secondary">Дачников Пётр Аркадьевич</a></p>
-                    <p th:if="${user.doctor == null}" class="text-danger">
-                        Сейчас этот пациент не закреплён ни за одним врачом. <span th:if="${isCurrentUserAdminFromSameHospital}">Необходимо в ближайшее время <a href="#" class="text-danger">назначить</a> ему лечащего врача.</span>
+                    <p th:if="${user.doctor != null}" class="mb-0">
+                        <a href="#" th:href="@{/doctors/__${user.doctor.id}__}" th:text="${user.doctor.userInformation.fullName}" class="text-secondary"> Дачников Пётр Аркадьевич </a>
+                        <span th:if="${isCurrentUserOwnDoctor}" class="fst-italic"> вы</span>
+                    </p>
+                    <p th:if="${user.doctor == null}" class="text-danger mb-0">
+                        <span th:if="${isSelf}">Сейчас вы не закреплены ни за одним врачом</span>
+                        <span th:if="${!isSelf}">Сейчас этот пациент не закреплён ни за одним врачом</span>
+                    </p>
+                </div>
+            </div>
+            <!---->
+            <div class="row" th:if="${isPatient}">
+                <div class="col-12">
+                    <h3 class="fs-4">
+                        Лечащий врач
+                        <a th:if="${isCurrentUserAdminFromSameHospital}" href="#" class="text-decoration-none">
+                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
+                        </a>
+                    </h3>
+                    <p th:if="${user.doctor != null}" class="mb-0">
+                        <a href="#" th:href="@{/doctors/__${user.doctor.id}__}" th:text="${user.doctor.userInformation.fullName}" class="text-secondary"> Дачников Пётр Аркадьевич </a>
+                        <span th:if="${isCurrentUserOwnDoctor}" class="fst-italic"> вы</span>
+                    </p>
+                    <p th:if="${user.doctor == null}" class="text-danger mb-0">
+                        <span th:if="${isSelf}">Сейчас вы не закреплены ни за одним врачом</span>
+                        <span th:if="${!isSelf}">Сейчас этот пациент не закреплён ни за одним врачом</span>
                     </p>
                 </div>
             </div>
