Добавил ещё атрибутов в контроллеры и проверку прав на действия в профиле пользователя. Исправил ошибку в js-коде по регистрации юзеров. Исправил "доктор" -> "врач" в роли пользователя.

--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -48,7 +48,7 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Рабочая информация
-                        <a href="#" class="text-decoration-none">
+                        <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
                             <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
@@ -60,7 +60,7 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Общая информация
-                        <a href="#" class="text-decoration-none">
+                        <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
                             <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
