Исправил некорректные ссылки на больницу в заголовках администратора и врача.

--- a/src/main/resources/templates/fragments/headers/doctor-header.html
+++ b/src/main/resources/templates/fragments/headers/doctor-header.html
@@ -18,7 +18,7 @@
                         <nav class="m-2 my-xl-0">
                             <ul class="nav justify-content-center">
                                 <li>
-                                    <a href="#" th:href="@{/hospitals/__${currentUser.hospital.id}__/}" class="nav-link text-secondary">Медицинское учреждение</a>
+                                    <a href="#" th:href="@{/hospitals/__${currentUser.hospital.id}__}" class="nav-link text-secondary">Медицинское учреждение</a>
                                 </li>
                                 <li>
                                     <a href="#" th:href="@{/doctors/__${currentUser.id}__/patients}" class="nav-link text-secondary">Пациенты</a>
