Поправил контроллеры пользователей и страницу профиля пользователя. Добавил необходимые атрибуты для списка пациентов врача.

--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <!---->
-            <div class="row mb-5" th:if="${isEmployee}">
+            <div class="row mb-5" th:if="${isHospitalEmployee}">
                 <div class="col-12">
                     <h3 class="fs-4">
                         Рабочая информация
