--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -20,9 +20,9 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/registration}" method="post" class="bg-gray-400 border rounded fs-5 p-3" id="user-registration-form">
+                    <form action="#" th:action="@{/rest/registration}" method="post" class="border rounded fs-5 p-3" id="user-registration-form">
                         <h2 class="fs-4">Регистрация</h2>
-                        <hr class="text-dark" />
+                        <hr />
                         <div class="mb-3">
                             <p class="form-label">Предопределённая информация</p>
                             <div class="border rounded p-2" id="predefined-info">
@@ -96,7 +96,7 @@
                                 </div>
                             </div>
                         </div>
-                        <hr class="text-dark mt-4" />
+                        <hr class="mt-4" />
                         <button type="submit" class="btn btn-lg btn-primary my-1">Зарегистрироваться</button>
                     </form>
                 </div>
