--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -20,9 +20,9 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="bg-gray-400 border rounded fs-5 p-3" id="hospital-registration-form">
+                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="border rounded fs-5 p-3" id="hospital-registration-form">
                         <h2 class="fs-4">Заявка</h2>
-                        <hr class="text-dark mb-1" />
+                        <hr class="mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
                             <div class="flex-grow-1 m-1">
                                 <label for="lastname" class="form-label">Фамилия <span class="text-danger fs-6"> *</span></label>
@@ -56,7 +56,7 @@
                                 <input type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="890231214560" />
                             </div>
                         </div>
-                        <div class="m-1 mb-3">
+                        <div class="m-1 mb-4">
                             <label for="email" class="form-label">Почта, на которую придёт код регистрации в приложении <span class="text-danger fs-6"> *</span></label>
                             <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
                         </div>
@@ -64,7 +64,7 @@
                             <label for="comment" class="form-label">Комментарий</label>
                             <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать что-нибудь про потенциальное будущее использование данного приложения вашим медицинским учреждением"></textarea>
                         </div>
-                        <hr class="text-dark" />
+                        <hr />
                         <button type="submit" class="btn btn-lg btn-primary my-1">Отправить</button>
                     </form>
                 </div>
