Исправил ссылку на некорректный id на странице логина.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
                         <h2 class="fs-4">Вход</h2>
                         <hr />
                         <div class="mb-3">
-                            <label for="email" class="form-label">Почта</label>
+                            <label for="username" class="form-label">Почта</label>
                             <input type="text" name="username" id="username" class="form-control" placeholder="some@someEmail" />
                         </div>
                         <div class="mb-4">
